--- a/sped-actix/Cargo.toml
+++ b/sped-actix/Cargo.toml
@@ -16,4 +16,11 @@ name = "server"
 path = "src/main.rs"
 
 [dependencies]
+actix = { version = "0.9", features = ["http"] }
 actix-web = "2.0.0"
+serde = "1"
+actix-rt = "1"
+tokio-postgres = { git="https://github.com/fafhrd91/rust-postgres.git" }
+bytes = "0.5"
+futures = "0.3"
+tokio = { version = "0.2", features = ["time"] }
